--- a/專項/各國世系圖表/韓國世系圖.html
+++ b/專項/各國世系圖表/韓國世系圖.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>&#x79E6;&#x570B;&#x4E16;&#x7CFB;&#x5716;</title>
+      <title>&#x97D3;&#x570B;&#x4E16;&#x7CFB;&#x5716;</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -261,133 +261,79 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="%E7%A7%A6%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96">&#x79E6;&#x570B;&#x4E16;&#x7CFB;&#x5716;</h1>
+      <h1 class="mume-header" id="%E9%9F%93%E5%9C%8B%E4%B8%96%E7%B3%BB%E5%9C%96">&#x97D3;&#x570B;&#x4E16;&#x7CFB;&#x5716;</h1>
 
 <h2 class="mume-header" id="%E5%82%B3%E4%BD%8D%E5%9C%96">&#x50B3;&#x4F4D;&#x5716;</h2>
 
 <div class="mermaid">graph TB
 
-subgraph &#x897F;&#x5468;
-    &#x975E;&#x5B50;--&gt;&#x79E6;&#x4FAF;
-    &#x79E6;&#x4FAF;--&gt;&#x516C;&#x4F2F;
-    &#x516C;&#x4F2F;--&gt;&#x79E6;&#x4EF2;
-    &#x79E6;&#x4EF2;--&gt;&#x79E6;&#x838A;&#x516C;
-end
-
 subgraph &#x6771;&#x5468;
     subgraph &#x6625;&#x79CB;
-        &#x79E6;&#x838A;&#x516C;--&gt;&#x79E6;&#x8944;&#x516C;
-        &#x79E6;&#x8944;&#x516C;--&gt;&#x79E6;&#x6587;&#x516C;
-        &#x79E6;&#x6587;&#x516C;--&gt;&#x79E6;&#x61B2;&#x516C;
-        &#x79E6;&#x61B2;&#x516C;--&gt;&#x79E6;&#x51FA;&#x5B50;
-        &#x79E6;&#x51FA;&#x5B50;--&gt;&#x79E6;&#x6B66;&#x516C;
-        &#x79E6;&#x6B66;&#x516C;--&gt;&#x79E6;&#x5FB7;&#x516C;
-        &#x79E6;&#x5FB7;&#x516C;--&gt;&#x79E6;&#x5BA3;&#x516C;
-        &#x79E6;&#x5BA3;&#x516C;--&gt;&#x79E6;&#x6210;&#x516C;
-        &#x79E6;&#x6210;&#x516C;--&gt;&#x79E6;&#x7A46;&#x516C;
-        &#x79E6;&#x7A46;&#x516C;--&gt;&#x79E6;&#x5EB7;&#x516C;
-        &#x79E6;&#x5EB7;&#x516C;--&gt;&#x79E6;&#x5171;&#x516C;
-        &#x79E6;&#x5171;&#x516C;--&gt;&#x79E6;&#x6853;&#x516C;
-        &#x79E6;&#x6853;&#x516C;--&gt;&#x79E6;&#x666F;&#x516C;
-        &#x79E6;&#x666F;&#x516C;--&gt;&#x79E6;&#x54C0;&#x516C;
-        &#x79E6;&#x54C0;&#x516C;--&gt;&#x79E6;&#x60E0;&#x516C;_&#x6625;&#x79CB;
-        &#x79E6;&#x60E0;&#x516C;_&#x6625;&#x79CB;--&gt;&#x79E6;&#x60BC;&#x516C;
+        &#x97D3;&#x842C;--&gt;&#x8CD5;&#x4F2F;
+        &#x8CD5;&#x4F2F;--&gt;&#x97D3;&#x7C21;
+        &#x97D3;&#x7C21;--&gt;&#x5B50;&#x8F3F;
+        &#x5B50;&#x8F3F;--&gt;&#x97D3;&#x53A5;
+        &#x97D3;&#x53A5;--&gt;&#x97D3;&#x5BA3;&#x5B50;
+        &#x97D3;&#x5BA3;&#x5B50;--&gt;&#x97D3;&#x9808;
+        &#x97D3;&#x9808;--&gt;&#x97D3;&#x4E0D;&#x4FE1;
+        &#x97D3;&#x4E0D;&#x4FE1;--&gt;&#x97D3;&#x5E9A;
+        &#x97D3;&#x5E9A;--&gt;&#x97D3;&#x5EB7;&#x5B50;
+        &#x97D3;&#x5EB7;&#x5B50;--&gt;&#x97D3;&#x6B66;&#x5B50;
+        &#x97D3;&#x6B66;&#x5B50;--&gt;&#x97D3;&#x666F;&#x4FAF;
     end
     subgraph &#x6230;&#x570B;
-        &#x79E6;&#x60BC;&#x516C;--&gt;&#x79E6;&#x53B2;&#x5171;&#x516C;
-        &#x79E6;&#x53B2;&#x5171;&#x516C;--&gt;&#x79E6;&#x8E81;&#x516C;
-        &#x79E6;&#x8E81;&#x516C;--&gt;&#x79E6;&#x61F7;&#x516C;
-        &#x79E6;&#x61F7;&#x516C;--&gt;&#x79E6;&#x9748;&#x516C;
-        &#x79E6;&#x9748;&#x516C;--&gt;&#x79E6;&#x7C21;&#x516C;
-        &#x79E6;&#x7C21;&#x516C;--&gt;&#x79E6;&#x60E0;&#x516C;_&#x6218;&#x56FD;
-        &#x79E6;&#x60E0;&#x516C;_&#x6218;&#x56FD;--&gt;&#x79E6;&#x51FA;&#x516C;
-        &#x79E6;&#x51FA;&#x516C;--&gt;&#x79E6;&#x737B;&#x516C;
-        &#x79E6;&#x737B;&#x516C;--&gt;&#x79E6;&#x5B5D;&#x516C;
-        &#x79E6;&#x5B5D;&#x516C;--&gt;&#x79E6;&#x60E0;&#x6587;&#x738B;
-        &#x79E6;&#x60E0;&#x6587;&#x738B;--&gt;&#x79E6;&#x6B66;&#x738B;
-        &#x79E6;&#x6B66;&#x738B;--&gt;&#x79E6;&#x662D;&#x8944;&#x738B;
-        &#x79E6;&#x662D;&#x8944;&#x738B;--&gt;&#x79E6;&#x5B5D;&#x6587;&#x738B;
-        &#x79E6;&#x5B5D;&#x6587;&#x738B;--&gt;&#x79E6;&#x838A;&#x8944;&#x738B;    
+        &#x97D3;&#x666F;&#x4FAF;--&gt;&#x97D3;&#x70C8;&#x4FAF;
+        &#x97D3;&#x70C8;&#x4FAF;--&gt;&#x97D3;&#x6587;&#x4FAF;
+        &#x97D3;&#x6587;&#x4FAF;--&gt;&#x97D3;&#x54C0;&#x4FAF;
+        &#x97D3;&#x54C0;&#x4FAF;--&gt;&#x97D3;&#x5171;&#x4FAF;
+        &#x97D3;&#x5171;&#x4FAF;--&gt;&#x97D3;&#x662D;&#x50D6;&#x4FAF;
+        &#x97D3;&#x662D;&#x50D6;&#x4FAF;--&gt;&#x97D3;&#x5BA3;&#x60E0;&#x738B;
+        &#x97D3;&#x5BA3;&#x60E0;&#x738B;--&gt;&#x97D3;&#x8944;&#x738B;
+        &#x97D3;&#x8944;&#x738B;--&gt;&#x97D3;&#x91D0;&#x738B;
+        &#x97D3;&#x91D0;&#x738B;--&gt;&#x97D3;&#x6853;&#x60E0;&#x738B;
+        &#x97D3;&#x6853;&#x60E0;&#x738B;--&gt;&#x97D3;&#x738B;&#x5B89;
     end
-end
-
-subgraph &#x79E6;&#x671D;
-    &#x79E6;&#x838A;&#x8944;&#x738B;--&gt;&#x79E6;&#x59CB;&#x7687;
-    &#x79E6;&#x59CB;&#x7687;--&gt;&#x79E6;&#x4E8C;&#x4E16;
-    &#x79E6;&#x4E8C;&#x4E16;--&gt;&#x5B50;&#x5B30;
 end
 
 </div><h2 class="mume-header" id="%E9%97%9C%E7%B3%BB%E5%9C%96">&#x95DC;&#x7CFB;&#x5716;</h2>
 
 <div class="mermaid">graph TB
 
-subgraph &#x897F;&#x5468;
-    &#x975E;&#x5B50;1--&gt;&#x79E6;&#x4FAF;2
-    &#x79E6;&#x4FAF;2--&gt;&#x516C;&#x4F2F;3
-    &#x516C;&#x4F2F;3--&gt;&#x79E6;&#x4EF2;4
-    &#x79E6;&#x4EF2;4--&gt;&#x79E6;&#x838A;&#x516C;5
-    &#x79E6;&#x4EF2;4--&gt;&#x516C;&#x5B50;&#x5EB7;
-end
-
 subgraph &#x6771;&#x5468;
     subgraph &#x6625;&#x79CB;
-        &#x79E6;&#x838A;&#x516C;5--&gt;&#x4E16;&#x7236;
-        &#x79E6;&#x838A;&#x516C;5--&gt;&#x79E6;&#x8944;&#x516C;1
-        &#x79E6;&#x8944;&#x516C;1--&gt;&#x79E6;&#x6587;&#x516C;2
-        &#x79E6;&#x6587;&#x516C;2--&gt;&#x79E6;&#x975C;&#x516C;
-        &#x79E6;&#x975C;&#x516C;--&gt;&#x79E6;&#x61B2;&#x516C;3
-        &#x79E6;&#x61B2;&#x516C;3--&gt;&#x79E6;&#x6B66;&#x516C;5
-        &#x79E6;&#x61B2;&#x516C;3--&gt;&#x79E6;&#x5FB7;&#x516C;6
-        &#x79E6;&#x61B2;&#x516C;3--&gt;&#x79E6;&#x51FA;&#x5B50;4
-        &#x79E6;&#x6B66;&#x516C;5--&gt;&#x516C;&#x5B50;&#x767D;
-        &#x79E6;&#x5FB7;&#x516C;6--&gt;&#x79E6;&#x5BA3;&#x516C;7
-        &#x79E6;&#x5FB7;&#x516C;6--&gt;&#x79E6;&#x6210;&#x516C;8
-        &#x79E6;&#x5FB7;&#x516C;6--&gt;&#x79E6;&#x7A46;&#x516C;9
-        &#x79E6;&#x7A46;&#x516C;9--&gt;&#x79E6;&#x5EB7;&#x516C;10
-        &#x79E6;&#x7A46;&#x516C;9--&gt;&#x516C;&#x5B50;&#x5F18;
-        &#x79E6;&#x7A46;&#x516C;9--&gt;&#x5C0F;&#x5B50;&#x6196;
-        &#x79E6;&#x5EB7;&#x516C;10--&gt;&#x79E6;&#x5171;&#x516C;11
-        &#x79E6;&#x5171;&#x516C;11--&gt;&#x79E6;&#x6853;&#x516C;12
-        &#x79E6;&#x6853;&#x516C;12--&gt;&#x79E6;&#x666F;&#x516C;13
-        &#x79E6;&#x6853;&#x516C;12--&gt;&#x5F8C;&#x5B50;&#x937C;
-        &#x79E6;&#x666F;&#x516C;13--&gt;&#x79E6;&#x54C0;&#x516C;14
-        &#x79E6;&#x54C0;&#x516C;14--&gt;&#x79E6;&#x5937;&#x516C;
-        &#x79E6;&#x5937;&#x516C;--&gt;&#x79E6;&#x60E0;&#x516C;_&#x6625;&#x79CB;15
-        &#x79E6;&#x60E0;&#x516C;_&#x6625;&#x79CB;15--&gt;&#x79E6;&#x60BC;&#x516C;16
+        &#x97D3;&#x842C;1--&gt;&#x8CD5;&#x4F2F;2
+        &#x8CD5;&#x4F2F;2--&gt;&#x97D3;&#x7C21;3
+        &#x97D3;&#x7C21;3--&gt;&#x5B50;&#x8F3F;4
+        &#x5B50;&#x8F3F;4--&gt;&#x97D3;&#x53A5;5
+        &#x97D3;&#x53A5;5--&gt;&#x97D3;&#x5BA3;&#x5B50;6
+        &#x97D3;&#x53A5;5--&gt;&#x97D3;&#x7121;&#x5FCC;
+        &#x97D3;&#x7121;&#x5FCC;--&gt;&#x97D3;&#x8944;
+        &#x97D3;&#x5BA3;&#x5B50;6--&gt;&#x97D3;&#x9808;7
+        &#x97D3;&#x5BA3;&#x5B50;6--&gt;&#x53D4;&#x79BD;
+        &#x97D3;&#x5BA3;&#x5B50;6--&gt;&#x53D4;&#x6912;
+        &#x97D3;&#x5BA3;&#x5B50;6--&gt;&#x5B50;&#x7FBD;
+        &#x97D3;&#x9808;7--&gt;&#x97D3;&#x4E0D;&#x4FE1;8
+        &#x97D3;&#x4E0D;&#x4FE1;8--&gt;&#x97D3;&#x5E9A;9
+        &#x97D3;&#x5E9A;9--&gt;&#x97D3;&#x5EB7;&#x5B50;10
+        &#x97D3;&#x5EB7;&#x5B50;10--&gt;&#x97D3;&#x6B66;&#x5B50;11
     end
     subgraph &#x6230;&#x570B;
-        &#x79E6;&#x60BC;&#x516C;16--&gt;&#x79E6;&#x53B2;&#x5171;&#x516C;17
-        &#x79E6;&#x53B2;&#x5171;&#x516C;17--&gt;&#x79E6;&#x8E81;&#x516C;18
-        &#x79E6;&#x53B2;&#x5171;&#x516C;17--&gt;&#x79E6;&#x61F7;&#x516C;19
-        &#x79E6;&#x61F7;&#x516C;19--&gt;&#x79E6;&#x662D;&#x5B50;
-        &#x79E6;&#x662D;&#x5B50;--&gt;&#x79E6;&#x9748;&#x516C;20
-        &#x79E6;&#x9748;&#x516C;20--&gt;&#x79E6;&#x737B;&#x516C;24
-        &#x79E6;&#x61F7;&#x516C;19--&gt;&#x79E6;&#x7C21;&#x516C;21
-        &#x79E6;&#x7C21;&#x516C;21--&gt;&#x79E6;&#x60E0;&#x516C;_&#x6218;&#x56FD;22
-        &#x79E6;&#x60E0;&#x516C;_&#x6218;&#x56FD;22--&gt;&#x79E6;&#x51FA;&#x516C;23
-        &#x79E6;&#x737B;&#x516C;24--&gt;&#x79E6;&#x5B5D;&#x516C;25
-        &#x79E6;&#x5B5D;&#x516C;25--&gt;&#x79E6;&#x60E0;&#x6587;&#x738B;26
-        &#x79E6;&#x5B5D;&#x516C;25--&gt;&#x6A17;&#x91CC;&#x5B50;
-        &#x79E6;&#x60E0;&#x6587;&#x738B;26--&gt;&#x79E6;&#x6B66;&#x738B;27
-        &#x79E6;&#x60E0;&#x6587;&#x738B;26--&gt;&#x79E6;&#x662D;&#x8944;&#x738B;28
-        &#x79E6;&#x60E0;&#x6587;&#x738B;26--&gt;&#x516C;&#x5B50;&#x609D;
-        &#x79E6;&#x60E0;&#x6587;&#x738B;26--&gt;&#x516C;&#x5B50;&#x5E02;
-        &#x79E6;&#x60E0;&#x6587;&#x738B;26--&gt;&#x516C;&#x5B50;&#x986F;
-        &#x79E6;&#x662D;&#x8944;&#x738B;28--&gt;&#x60BC;&#x592A;&#x5B50;
-        &#x79E6;&#x662D;&#x8944;&#x738B;28--&gt;&#x79E6;&#x5B5D;&#x6587;&#x738B;29
-        &#x79E6;&#x5B5D;&#x6587;&#x738B;29--&gt;&#x5B50;&#x5092;
-        &#x79E6;&#x5B5D;&#x6587;&#x738B;29--&gt;&#x79E6;&#x838A;&#x8944;&#x738B;30
+        &#x97D3;&#x6B66;&#x5B50;11--&gt;&#x97D3;&#x666F;&#x4FAF;1
+        &#x97D3;&#x6B66;&#x5B50;11--&gt;&#x4FE0;&#x7D2F;
+        &#x97D3;&#x666F;&#x4FAF;1--&gt;&#x97D3;&#x70C8;&#x4FAF;2
+        &#x97D3;&#x70C8;&#x4FAF;2--&gt;&#x97D3;&#x6587;&#x4FAF;3
+        &#x97D3;&#x6587;&#x4FAF;3--&gt;&#x97D3;&#x54C0;&#x4FAF;4
+        &#x97D3;&#x54C0;&#x4FAF;4--&gt;&#x97D3;&#x5171;&#x4FAF;5
+        &#x97D3;&#x5171;&#x4FAF;5--&gt;&#x97D3;&#x662D;&#x50D6;&#x4FAF;6
+        &#x97D3;&#x662D;&#x50D6;&#x4FAF;6--&gt;&#x97D3;&#x5BA3;&#x60E0;&#x738B;7
+        &#x97D3;&#x5BA3;&#x60E0;&#x738B;7--&gt;&#x97D3;&#x8944;&#x738B;8
+        &#x97D3;&#x8944;&#x738B;8--&gt;&#x97D3;&#x91D0;&#x738B;9
+        &#x97D3;&#x8944;&#x738B;8--&gt;&#x592A;&#x5B50;&#x5B30;
+        &#x97D3;&#x8944;&#x738B;8--&gt;&#x87E3;&#x8768;
+        &#x87E3;&#x8768;--&gt;&#x97D3;&#x738B;&#x4FE1;
+        &#x97D3;&#x91D0;&#x738B;9--&gt;&#x97D3;&#x6853;&#x60E0;&#x738B;10
+        &#x97D3;&#x6853;&#x60E0;&#x738B;10--&gt;&#x97D3;&#x738B;&#x5B89;11
     end
-end
-
-subgraph &#x79E6;&#x671D;
-    &#x79E6;&#x838A;&#x8944;&#x738B;30--&gt;&#x79E6;&#x59CB;&#x7687;1
-    &#x79E6;&#x838A;&#x8944;&#x738B;30--&gt;&#x6210;&#x87DC;
-    &#x79E6;&#x59CB;&#x7687;1--&gt;&#x6276;&#x8607;
-    &#x79E6;&#x59CB;&#x7687;1--&gt;&#x516C;&#x5B50;&#x5C07;&#x95AD;
-    &#x79E6;&#x59CB;&#x7687;1--&gt;&#x516C;&#x5B50;&#x9AD8;
-    &#x79E6;&#x59CB;&#x7687;1--&gt;&#x79E6;&#x4E8C;&#x4E16;2
-    &#x79E6;&#x4E8C;&#x4E16;2--&#x4F84;--&gt;&#x5B50;&#x5B30;3
 end
 
 </div>
