完成卷8第三節，秦末齊國政權整理

--- a/字段說明.html
+++ b/字段說明.html
@@ -265,6 +265,9 @@ pre[data-line] .line-highlight[data-end]:after {
       <div class="mume markdown-preview  ">
       <h1 class="mume-header" id="%E4%BA%BA%E7%89%A9%E7%B8%BD%E8%A1%A8">&#x4EBA;&#x7269;&#x7E3D;&#x8868;</h1>
 
+<ul>
+<li>&#x6240;&#x6709;&#x985E;&#x6578;&#x7D44;&#x6578;&#x64DA;&#x4EE5;<code>|</code>&#x7B26;&#x865F;&#x5206;&#x9694;</li>
+</ul>
 <table>
 <thead>
 <tr>
@@ -308,7 +311,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <tr>
 <td>&#x5973;&#x6027;</td>
 <td>bool</td>
-<td></td>
+<td>&#x7A7A;-&#x7537;&#xFF1B;1-&#x5973;&#xFF1B;0-&#x592A;&#x76E3;</td>
 <td></td>
 </tr>
 <tr>
@@ -367,14 +370,14 @@ pre[data-line] .line-highlight[data-end]:after {
 </tr>
 <tr>
 <td>&#x51FA;&#x751F;&#x6708;&#x65E5;</td>
-<td>date</td>
-<td></td>
+<td>str</td>
+<td>&#x6587;&#x672C;&#x8868;&#x793A;&#xFF0C;&#x53EF;&#x80FD;&#x53EA;&#x6709;&#x6708;</td>
 <td></td>
 </tr>
 <tr>
 <td>&#x53BB;&#x4E16;&#x6708;&#x65E5;</td>
-<td>date</td>
-<td></td>
+<td>str</td>
+<td>&#x6587;&#x672C;&#x8868;&#x793A;&#xFF0C;&#x53EF;&#x80FD;&#x53EA;&#x6709;&#x6708;</td>
 <td></td>
 </tr>
 <tr>
@@ -392,7 +395,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <tr>
 <td>&#x7D71;&#x6CBB;&#x653F;&#x6B0A;</td>
 <td>str</td>
-<td></td>
+<td>&#x53EF;&#x80FD;&#x7D71;&#x6CBB;&#x591A;&#x500B;&#x653F;&#x6B0A;&#xFF0C;&#x5247;&#x5F97;&#x4F4D;&#x5E74;&#x3001;&#x5931;&#x4F4D;&#x5E74;&#x70BA;&#x5168;&#x90E8;&#x6642;&#x9593;&#xFF1B;&#x82E5;&#x591A;&#x7D71;&#x6CBB;&#x653F;&#x6B0A;&#x6642;&#x9593;&#x4E0D;&#x9023;&#x7E8C;&#xFF0C;&#x53EA;&#x53D6;&#x7B2C;&#x4E00;&#x500B;&#xFF0C;&#x5176;&#x4F59;&#x7C21;&#x8FF0;&#x4E2D;&#x8AAA;&#x660E;</td>
 <td></td>
 </tr>
 <tr>
