--- a/字段說明.html
+++ b/字段說明.html
@@ -371,13 +371,13 @@ pre[data-line] .line-highlight[data-end]:after {
 <tr>
 <td>&#x51FA;&#x751F;&#x6708;&#x65E5;</td>
 <td>str</td>
-<td>&#x6587;&#x672C;&#x8868;&#x793A;&#xFF0C;&#x53EF;&#x80FD;&#x53EA;&#x6709;&#x6708;</td>
+<td>&#x6587;&#x672C;&#x8868;&#x793A;&#xFF0C;&#x53EA;&#x6709;&#x6708;&#x683C;&#x5F0F;*&#xFF0C;&#x6709;&#x6708;&#x65E5;&#x683C;&#x5F0F;*.*</td>
 <td></td>
 </tr>
 <tr>
 <td>&#x53BB;&#x4E16;&#x6708;&#x65E5;</td>
 <td>str</td>
-<td>&#x6587;&#x672C;&#x8868;&#x793A;&#xFF0C;&#x53EF;&#x80FD;&#x53EA;&#x6709;&#x6708;</td>
+<td>&#x6587;&#x672C;&#x8868;&#x793A;&#xFF0C;&#x53EA;&#x6709;&#x6708;&#x683C;&#x5F0F;*&#xFF0C;&#x6709;&#x6708;&#x65E5;&#x683C;&#x5F0F;*.*</td>
 <td></td>
 </tr>
 <tr>
