--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>3.9.3 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E5%92%8C%E8%A6%AA%E5%88%97%E8%A1%A8.html">&#x548C;&#x89AA;&#x5217;&#x8868;</a></li>
 <li>3.9.4 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E8%A2%AB%E8%A9%9B%E5%92%92%E7%9A%84%E8%B6%99%E7%8E%8B.html">&#x88AB;&#x8A5B;&#x5492;&#x7684;&#x8D99;&#x738B;</a></li>
 <li>3.9.5 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97.html">&#x5947;&#x8469;&#x5E8F;&#x5217;</a></li>
+<li>3.9.6 <a href="%E9%80%9A%E7%94%A8%E5%B0%88%E9%A0%85/%E9%9B%9C%E9%A0%85/%E7%99%BE%E8%B6%8A%E5%90%84%E5%9C%8B.html">&#x767E;&#x8D8A;&#x5404;&#x570B;</a></li>
 </ul>
 <h2 class="mume-header" id="4-%E7%AD%86%E8%A8%98">4 &#x7B46;&#x8A18;</h2>
 
