--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -266,14 +266,14 @@ pre[data-line] .line-highlight[data-end]:after {
       <h1 class="mume-header" id="%E5%A5%87%E8%91%A9%E5%BA%8F%E5%88%97">&#x5947;&#x8469;&#x5E8F;&#x5217;</h1>
 
 <ul>
-<li>&#x62D2;&#x7D55;&#x5347;&#x5B98;&#x767C;&#x8CA1;&#xFF1A;&#x5B63;&#x672D;&#x3001;&#x738B;&#x880B;</li>
-<li>&#x5F8C;&#x5BAE;&#x9054;&#x4EBA;&#xFF1A;&#x7530;&#x6210;&#x5B50;&#x3001;&#x4E2D;&#x5C71;&#x9756;&#x738B;&#x5289;&#x52DD;</li>
+<li>&#x62D2;&#x7D55;&#x5347;&#x5B98;&#x767C;&#x8CA1;&#xFF1A;&#x5B63;&#x672D;&#x3001;&#x5B50;&#x95AD;&#x3001;&#x738B;&#x880B;</li>
+<li>&#x5F8C;&#x5BAE;&#x9054;&#x4EBA;&#xFF1A;&#x7530;&#x6210;&#x5B50;&#x3001;&#x4E2D;&#x5C71;&#x9756;&#x738B;&#x5289;&#x52DD;&#x3001;&#x7530;&#x86A1;</li>
 <li>&#x70F9;&#x5B50;&#x98DF;&#x5B50;&#xFF1A;&#x6613;&#x7259;&#x3001;&#x6A02;&#x7F8A;</li>
 <li>&#x4EBA;&#x529B;&#x5927;&#x725B;&#xFF1A;&#x7FDF;&#x749C;</li>
 <li>&#x611B;&#x58EB;&#x5352;&#xFF1A;&#x5433;&#x8D77;&#x3001;&#x674E;&#x5EE3;</li>
 <li>&#x62DB;&#x8C93;&#x905E;&#x72D7;&#x541B;&#x738B;&#xFF1A;&#x7121;&#x5F4A;&#x3001;&#x5B8B;&#x5EB7;&#x738B;</li>
 <li>&#x9913;&#x6B7B;&#xFF1A;&#x9F4A;&#x6853;&#x516C;&#x3001;&#x8D99;&#x6B66;&#x9748;&#x738B;&#x3001;&#x8D99;&#x738B;&#x5289;&#x53CB;&#x3001;&#x5468;&#x4E9E;&#x592B;</li>
-<li>&#x667A;&#x8B00;&#x5C0F;&#x4EBA;&#x7269;&#xFF1A;&#x8CAB;&#x73E0;&#x8005;&#x3001;&#x5BA3;&#x66F2;&#x4EFB;&#x6C0F;&#x3001;&#x864E;&#x5708;&#x55C7;&#x592B;&#x3001;&#x5468;&#x4E18;</li>
+<li>&#x667A;&#x8B00;&#x5C0F;&#x4EBA;&#x7269;&#xFF1A;&#x8CAB;&#x73E0;&#x8005;&#x3001;&#x8D99;&#x990A;&#x5352;&#x3001;&#x5BA3;&#x66F2;&#x4EFB;&#x6C0F;&#x3001;&#x864E;&#x5708;&#x55C7;&#x592B;&#x3001;&#x5468;&#x4E18;</li>
 <li>&#x667A;&#x6167;&#x7684;&#x7236;&#x6BCD;&#xFF1A;&#x5433;&#x8D77;&#x5352;&#x6BCD;&#x3001;&#x9673;&#x5B30;&#x6BCD;&#x3001;&#x738B;&#x9675;&#x4E4B;&#x6BCD;</li>
 <li>&#x9F8D;&#x967D;&#x541B;&#x4E3B;&#xFF1A;&#x9B4F;&#x5B89;&#x91D0;&#x738B;&#x3001;&#x5289;&#x90A6;&#x3001;&#x6F22;&#x60E0;&#x5E1D;&#x3001;&#x6F22;&#x6587;&#x5E1D;&#x3001;&#x6F22;&#x666F;&#x5E1D;&#x3001;&#x6F22;&#x6B66;&#x5E1D;</li>
 <li>&#x7D55;&#x671B;&#x7684;&#x7236;&#x6BCD;&#xFF1A;&#x8D99;&#x5C07;&#x62EC;&#x6BCD;&#x3001;&#x6641;&#x932F;&#x7236;&#x3001;&#x9673;&#x52DD;&#x59BB;&#x7236;</li>
@@ -281,17 +281,18 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x53E3;&#x5403;&#xFF1A;&#x97D3;&#x975E;&#x3001;&#x5468;&#x660C;&#x3001;&#x53F8;&#x99AC;&#x76F8;&#x5982;&#x3001;&#x9127;&#x827E;</li>
 <li>&#x72D0;&#x81ED;&#xFF1A;&#x695A;&#x61F7;&#x738B;</li>
 <li>&#x58C1;&#x4E2D;&#x85CF;&#x66F8;&#xFF1A;&#x5B54;&#x9B92;&#x3001;&#x4F0F;&#x751F;</li>
-<li>&#x76F8;&#x9762;&#x5927;&#x5E2B;&#xFF1A;&#x5442;&#x516C;&#x3001;&#x5289;&#x90A6;&#x3001;&#x8A31;&#x8CA0;</li>
+<li>&#x76F8;&#x9762;&#x5927;&#x5E2B;&#xFF1A;&#x5442;&#x516C;&#x3001;&#x5289;&#x90A6;&#x3001;&#x8A31;&#x8CA0;&#x3001;&#x5510;&#x8209;</li>
 <li>&#x611F;&#x52D5;&#x4E2D;&#x570B;&#x597D;&#x5B98;&#xFF1A;&#x9B4F;&#x548E;</li>
 <li>&#x5634;&#x8CE4;&#xFF1A;&#x97D3;&#x751F;&#x3001;&#x6817;&#x59EC;</li>
 <li>&#x672C;&#x4F86;&#x80FD;&#x8D0F;&#x7AD9;&#x932F;&#x968A;&#xFF1A;&#x674E;&#x5DE6;&#x8ECA;&#x3001;&#x9F8D;&#x4E14;&#x5BA2;</li>
 <li>&#x9577;&#x58FD;&#xFF1A;&#x8D99;&#x4F57;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4F0F;&#x751F;</li>
-<li>&#x4E00;&#x751F;&#x60B2;&#x50AC;&#xFF1A;&#x9148;&#x5BC4;&#x3001;&#x7533;&#x5C60;&#x5609;</li>
+<li>&#x82E6;&#x903C;&#x4E00;&#x751F;&#xFF1A;&#x9148;&#x5BC4;&#x3001;&#x7533;&#x5C60;&#x5609;</li>
 <li>&#x4E8C;&#x5A5A;&#x7687;&#x540E;&#xFF1A;&#x8584;&#x59EC;&#x3001;&#x5B5D;&#x666F;&#x738B;&#x7687;&#x540E;</li>
 <li>&#x919C;&#xFF1A;&#x5B5F;&#x5617;&#x541B;&#x3001;&#x7530;&#x86A1;</li>
 <li>&#x91CE;&#x7378;&#x640F;&#x9B25;&#x8005;&#xFF1A;&#x8F45;&#x56FA;&#x751F;&#x3001;&#x8CC8;&#x592B;&#x4EBA;&#x3001;&#x99AE;&#x5A55;&#x59A4;</li>
 <li>&#x88AB;&#x6C61;&#x76DC;&#x5AC2;&#x53D7;&#x91D1;&#xFF1A;&#x9673;&#x5E73;&#x3001;&#x76F4;&#x4E0D;&#x7591;</li>
 <li>&#x5751;&#x7239;&#xFF1A;&#x5468;&#x4E9E;&#x592B;&#x5B50;</li>
+<li>&#x540D;&#x5EDA;&#xFF1A;&#x4F0A;&#x5C39;&#x3001;&#x6613;&#x7259;</li>
 </ul>
 
       </div>
