更新至卷19節5

--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -267,10 +267,11 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <ul>
 <li>&#x62D2;&#x7D55;&#x5347;&#x5B98;&#x767C;&#x8CA1;&#xFF1A;&#x5B63;&#x672D;&#x3001;&#x5B50;&#x95AD;&#x3001;&#x738B;&#x880B;</li>
-<li>&#x5F8C;&#x5BAE;&#x9054;&#x4EBA;&#xFF1A;&#x7530;&#x6210;&#x5B50;&#x3001;&#x4E2D;&#x5C71;&#x9756;&#x738B;&#x5289;&#x52DD;&#x3001;&#x7530;&#x86A1;</li>
+<li>&#x5F8C;&#x5BAE;&#x9054;&#x4EBA;&#xFF1A;&#x7530;&#x6210;&#x5B50;&#x3001;&#x4E2D;&#x5C71;&#x9756;&#x738B;&#x5289;&#x52DD;&#x3001;&#x7530;&#x86A1;&#x3001;&#x53F8;&#x99AC;&#x708E;</li>
 <li>&#x70F9;&#x5B50;&#x98DF;&#x5B50;&#xFF1A;&#x6613;&#x7259;&#x3001;&#x6A02;&#x7F8A;</li>
 <li>&#x4EBA;&#x529B;&#x5927;&#x725B;&#xFF1A;&#x7FDF;&#x749C;</li>
-<li>&#x611B;&#x58EB;&#x5352;&#xFF1A;&#x5433;&#x8D77;&#x3001;&#x674E;&#x5EE3;</li>
+<li>&#x611B;&#x5175;&#x5982;&#x5B50;&#xFF1A;&#x5433;&#x8D77;&#x3001;&#x674E;&#x5EE3;&#x3001;&#x885B;&#x9752;</li>
+<li>&#x8650;&#x5F85;&#x58EB;&#x5352;&#xFF1A;&#x970D;&#x53BB;&#x75C5;&#x3001;&#x5F35;&#x98DB;</li>
 <li>&#x62DB;&#x8C93;&#x905E;&#x72D7;&#x541B;&#x738B;&#xFF1A;&#x7121;&#x5F4A;&#x3001;&#x5B8B;&#x5EB7;&#x738B;</li>
 <li>&#x9913;&#x6B7B;&#xFF1A;&#x9F4A;&#x6853;&#x516C;&#x3001;&#x8D99;&#x6B66;&#x9748;&#x738B;&#x3001;&#x8D99;&#x738B;&#x5289;&#x53CB;&#x3001;&#x5468;&#x4E9E;&#x592B;</li>
 <li>&#x667A;&#x8B00;&#x5C0F;&#x4EBA;&#x7269;&#xFF1A;&#x8CAB;&#x73E0;&#x8005;&#x3001;&#x8D99;&#x990A;&#x5352;&#x3001;&#x5BA3;&#x66F2;&#x4EFB;&#x6C0F;&#x3001;&#x864E;&#x5708;&#x55C7;&#x592B;&#x3001;&#x5468;&#x4E18;</li>
@@ -289,10 +290,21 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x82E6;&#x903C;&#x4E00;&#x751F;&#xFF1A;&#x9148;&#x5BC4;&#x3001;&#x7533;&#x5C60;&#x5609;</li>
 <li>&#x4E8C;&#x5A5A;&#x7687;&#x540E;&#xFF1A;&#x8584;&#x59EC;&#x3001;&#x5B5D;&#x666F;&#x738B;&#x7687;&#x540E;</li>
 <li>&#x919C;&#xFF1A;&#x5B5F;&#x5617;&#x541B;&#x3001;&#x7530;&#x86A1;</li>
-<li>&#x91CE;&#x7378;&#x640F;&#x9B25;&#x8005;&#xFF1A;&#x8F45;&#x56FA;&#x751F;&#x3001;&#x8CC8;&#x592B;&#x4EBA;&#x3001;&#x99AE;&#x5A55;&#x59A4;</li>
+<li>&#x91CE;&#x7378;&#x640F;&#x9B25;&#x8005;&#xFF1A;&#x8F45;&#x56FA;&#x3001;&#x8CC8;&#x592B;&#x4EBA;&#x3001;&#x99AE;&#x5A55;&#x59A4;</li>
 <li>&#x88AB;&#x6C61;&#x76DC;&#x5AC2;&#x53D7;&#x91D1;&#xFF1A;&#x9673;&#x5E73;&#x3001;&#x76F4;&#x4E0D;&#x7591;</li>
 <li>&#x5751;&#x7239;&#xFF1A;&#x5468;&#x4E9E;&#x592B;&#x5B50;</li>
 <li>&#x540D;&#x5EDA;&#xFF1A;&#x4F0A;&#x5C39;&#x3001;&#x6613;&#x7259;</li>
+<li>&#x72D7;&#x76E3;&#x99AC;&#x76E3;&#xFF1A;&#x694A;&#x5F97;&#x610F;&#x3001;&#x91D1;&#x65E5;&#x78FE;</li>
+<li>&#x5C60;&#x592B;&#x51FA;&#x8EAB;&#xFF1A;&#x59DC;&#x5B50;&#x7259;&#x3001;&#x8076;&#x653F;&#x3001;&#x6A0A;&#x5672;&#x3001;&#x6731;&#x4EA5;&#x3001;&#x4F55;&#x9032;&#x3001;&#x5F35;&#x98DB;</li>
+</ul>
+<h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">&#x96DC;&#x8AAA;</h1>
+
+<ul>
+<li>&#x5BC6;&#x5EB7;&#x516C;&#xFF1A;&#x4E09;&#x5973;&#x6295;&#x5954;&#xFF0C;&#x57F7;&#x610F;&#x8FCE;&#x5A36;&#xFF0C;&#x88AB;&#x6EC5;&#x570B;</li>
+<li>&#x7956;&#x5DF1;&#xFF1A;&#x5805;&#x6301;&#x82E6;&#x5B5D;&#x88AB;&#x7E7C;&#x6BCD;&#x6D41;&#x653E;&#x81F4;&#x6B7B;</li>
+<li>&#x6649;&#x666F;&#x516C;&#xFF1A;&#x6389;&#x7CDE;&#x5751;&#x800C;&#x6B7B;</li>
+<li>&#x71D5;&#x738B;&#x5289;&#x5B9A;&#x570B;&#xFF1A;&#x5EB6;&#x6BCD;&#x5F1F;&#x59BB;&#x5973;&#x5152;&#x4E09;&#x4EE3;&#x4E82;&#x502B;&#x738B;</li>
+<li>&#x6C5F;&#x90FD;&#x738B;&#x5289;&#x5EFA;&#xFF1A;&#x901A;&#x59E6;&#x5EB6;&#x6BCD;&#x59B9;&#x59B9;&#xFF0C;&#x770B;&#x4EBA;&#x6DF9;&#x6B7B;&#x6216;&#x88AB;&#x72FC;&#x54AC;&#x6B7B;&#x53D6;&#x6A02;&#xFF0C;&#x5B89;&#x6392;&#x5BAE;&#x5973;&#x8207;&#x7F8A;&#x72D7;&#x4EA4;&#x3002;</li>
 </ul>
 
       </div>
