--- a/主要數據/字段說明.html
+++ b/主要數據/字段說明.html
@@ -265,12 +265,12 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <ul>
 <li>所有類數組數據以<code>|</code>符號分隔</li>
+<li>60000以上索引號人物為書外人物</li>
 </ul>
 <table>
 <thead>
 <tr>
 <th>字段名稱</th>
-<th>字段描述</th>
 <th>字段類型</th>
 <th>說明</th>
 </tr>
@@ -280,157 +280,131 @@ pre[data-line] .line-highlight[data-end]:after {
 <td>索引號</td>
 <td>int</td>
 <td>主鍵，唯一數值索引，每卷占200號</td>
-<td></td>
 </tr>
 <tr>
 <td>慣用名</td>
 <td>str</td>
 <td>WIKI百科中常規用名，如無沿用其它</td>
-<td></td>
 </tr>
 <tr>
 <td>通鑑名</td>
 <td>array</td>
 <td>通鑒內出現的指示此人的所有名稱</td>
-<td></td>
 </tr>
 <tr>
 <td>通鑑目錄</td>
 <td>int</td>
 <td>外鍵，通鑑內首次出現的目錄編號</td>
-<td></td>
 </tr>
 <tr>
 <td>出處</td>
 <td>int</td>
-<td>空-常規正文，此時代人物；1-臣光曰；2-常規正文，提及之後時代人物;3-常規正文，提及之前時代人物</td>
-<td></td>
+<td>空-常規正文，此時代人物；1-臣光曰；2-常規正文，提及之後時代人物；3-常規正文，提及之前時代人物；9-書外記錄關聯或聯想人物</td>
 </tr>
 <tr>
 <td>女性</td>
 <td>bool</td>
 <td>空-男；1-女；0-太監</td>
-<td></td>
 </tr>
 <tr>
 <td>別稱</td>
 <td>array</td>
-<td>常見的別稱</td>
-<td></td>
+<td>常見的別稱。可能有多個，下同</td>
 </tr>
 <tr>
 <td>姓</td>
-<td>str</td>
-<td></td>
+<td>array</td>
 <td></td>
 </tr>
 <tr>
 <td>名</td>
 <td>array</td>
-<td>可能有多個，下同</td>
 <td></td>
 </tr>
 <tr>
 <td>字</td>
 <td>array</td>
 <td></td>
-<td></td>
 </tr>
 <tr>
 <td>號</td>
 <td>array</td>
-<td></td>
 <td></td>
 </tr>
 <tr>
 <td>氏</td>
 <td>array</td>
 <td></td>
-<td></td>
 </tr>
 <tr>
 <td>謚</td>
 <td>array</td>
 <td></td>
-<td></td>
 </tr>
 <tr>
 <td>生年</td>
 <td>int</td>
-<td>出生年，以負號表示公元前，未知為0</td>
-<td></td>
+<td>出生年。以負號表示公元前，未知為0，下同</td>
 </tr>
 <tr>
 <td>卒年</td>
 <td>int</td>
-<td>死亡年，以負號表示公元前，未知為0</td>
-<td></td>
+<td>死亡年</td>
 </tr>
 <tr>
 <td>出生月日</td>
 <td>str</td>
-<td>文本表示，只有月格式*，有月日格式*.*</td>
-<td></td>
+<td>文本表示。只有月格式*，有月日格式*.*，下同</td>
 </tr>
 <tr>
 <td>去世月日</td>
 <td>str</td>
-<td>文本表示，只有月格式*，有月日格式*.*</td>
-<td></td>
+<td>文本表示</td>
 </tr>
 <tr>
 <td>得位年</td>
 <td>int</td>
-<td>統治者的得位年，以負號表示公元前</td>
-<td></td>
+<td>統治者的得位年</td>
 </tr>
 <tr>
 <td>失位年</td>
 <td>int</td>
-<td>統治者的失位年，以負號表示公元前</td>
-<td></td>
+<td>統治者的失位年</td>
 </tr>
 <tr>
 <td>統治政權</td>
 <td>str</td>
 <td>可能統治多個政權，則得位年、失位年為全部時間；若多統治政權時間不連續，只取第一個，其余簡述中說明</td>
-<td></td>
 </tr>
 <tr>
 <td>從屬政權</td>
 <td>array</td>
 <td>可能從屬多個政權</td>
-<td></td>
 </tr>
 <tr>
 <td>生僻度</td>
 <td>int</td>
-<td>1-維基百科無此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現；5-歷史上從未記載過真名，但出現於其余文獻，有一定知名度</td>
-<td></td>
+<td>空-維基百科有此詞條；1-維基百科無，百度有此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現；5-歷史上從未記載過真名，但其余文獻有詳述，或有一定知名度</td>
 </tr>
 <tr>
 <td>簡述</td>
 <td>str</td>
 <td>簡要描述此人事跡</td>
-<td></td>
 </tr>
 <tr>
 <td>記載年</td>
 <td>array</td>
-<td>若無生卒得失年，可記錄歷史記載的活躍年份，取可查最早出現的年份。空表示來自通鑑內記載</td>
-<td></td>
+<td>若無生卒得失年，可記錄歷史記載的活躍年份，取可查最早出現的年份</td>
 </tr>
 <tr>
 <td>記載年備註</td>
 <td>str</td>
-<td>僅用於記載年的相關說明</td>
-<td></td>
+<td>僅用於記載年的相關說明。如有記載年而此處無備注，表示來自通鑑內記載</td>
 </tr>
 <tr>
 <td>備注</td>
 <td>str</td>
-<td></td>
-<td></td>
+<td>問題考據、生僻字讀音、wiki名不一致等內容</td>
 </tr>
 </tbody>
 </table>
