更新人物至卷21節10

--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -273,7 +273,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>招貓遞狗君王：無彊、宋康王</li>
 <li>餓死：齊桓公、趙武靈王、趙王劉友、周亞夫</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘</li>
-<li>智慧的父母：吳起卒母、陳嬰母、王陵之母</li>
+<li>智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母</li>
 <li>龍陽君主：魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝</li>
 <li>絕望的父母：趙將括母、晁錯父、陳勝妻父</li>
 <li>給君主獻孕婦：呂不韋、春申君</li>
@@ -281,7 +281,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>狐臭：楚懷王</li>
 <li>壁中藏書：孔鮒、伏生</li>
 <li>相面大師：呂公、劉邦、許負、唐舉</li>
-<li>感動中國好官：魏咎、卜式</li>
+<li>感動中國好官：魏咎、卜式、兒寬</li>
 <li>嘴賤：韓生、栗姬</li>
 <li>站錯隊的智者：李左車、龍且客、伍被</li>
 <li>長壽：趙佗、張蒼、伏生</li>
@@ -294,8 +294,10 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>名廚：伊尹、易牙</li>
 <li>狗監馬監：楊得意、金日磾、李延年</li>
 <li>屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛</li>
-<li>力能扛鼎：秦武王、項羽、淮南王劉長</li>
+<li>力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥</li>
 <li>易與耳：劇辛、龍且、李廣</li>
+<li>刻苦讀書：朱買臣、兒寬</li>
+<li>常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆</li>
 </ul>
 <h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">雜說</h1>
 
@@ -306,6 +308,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>燕王劉定國：庶母弟妻女兒三代亂倫王</li>
 <li>江都王劉建：通姦庶母妹妹，看人淹死或被狼咬死取樂，安排宮女與羊狗交。</li>
 <li>濟東王劉彭離：熱愛扮演土匪搶劫殺人</li>
+<li>衡山王太子劉爽：為避免后媽誣陷自己，欲與之私通造把柄</li>
 </ul>
 
       </div>
