更新卷22人物

--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -269,7 +269,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>烹子食子：易牙、樂羊</li>
 <li>人力大牛：翟璜</li>
 <li>愛兵如子：吳起、李廣、衛青</li>
-<li>虐待士卒：霍去病、張飛</li>
+<li>虐待士卒：霍去病、李廣利、張飛</li>
 <li>招貓遞狗君王：無彊、宋康王</li>
 <li>餓死：齊桓公、趙武靈王、趙王劉友、周亞夫</li>
 <li>智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘</li>
@@ -290,14 +290,16 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>醜：楚穆王、孟嘗君、田蚡</li>
 <li>野獸搏鬥者：轅固、賈夫人、馮婕妤</li>
 <li>被污盜嫂受金：陳平、直不疑</li>
-<li>坑爹：周亞夫子</li>
+<li>坑爹：周亞夫子、公孫敬聲</li>
 <li>名廚：伊尹、易牙</li>
-<li>狗監馬監：楊得意、金日磾、李延年</li>
+<li>狗監馬監：楊得意、金日磾、李延年、蘇武、上官桀</li>
 <li>屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛</li>
 <li>力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥</li>
 <li>易與耳：劇辛、龍且、李廣</li>
 <li>刻苦讀書：朱買臣、兒寬</li>
 <li>常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆</li>
+<li>漢奸：中行説、趙信、衛律</li>
+<li>媽寶：梁王劉武、昭平君</li>
 </ul>
 <h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">雜說</h1>
 
